# rust-shell

./: .gitignore  Cargo.toml  ashell  ideas.adoc  research.adoc
doc/: heredoc_delims.adoc
src/: helpers.rs  lexer.rs  lib.rs  main.rs  model.rs  parser.rs  run.rs
