[package]
name = "shell"
version = "0.1.0"
authors = ["Aryailia <Aryailia@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.17.5", features = ["event-stream"] }
futures = "0.3"
futures-timer = "3"
async-std = "1.6"
